--- a/TheAGEnt.Core/TheAGEnt.Core.csproj
+++ b/TheAGEnt.Core/TheAGEnt.Core.csproj
@@ -222,6 +222,8 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
+    <Compile Include="Util\ApplicationOAuthProvider.cs" />
     <Compile Include="Util\AutofacConfig.cs" />
   </ItemGroup>
   <ItemGroup>
