--- a/TheAGEnt.Core/TheAGEnt.Core.csproj
+++ b/TheAGEnt.Core/TheAGEnt.Core.csproj
@@ -56,6 +56,10 @@
       <HintPath>..\packages\Autofac.WebApi2.4.0.0\lib\net45\Autofac.Integration.WebApi.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Autofac.Integration.WebApi.Owin, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.WebApi2.Owin.4.0.0\lib\net45\Autofac.Integration.WebApi.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -221,10 +225,13 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\СlaimModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Util\ApplicationOAuthProvider.cs" />
     <Compile Include="Util\AutofacConfig.cs" />
+    <Compile Include="Util\MimeMultipart.cs" />
+    <Compile Include="Util\UploadMultipartFormProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -273,6 +280,10 @@
     <ProjectReference Include="..\TheAGEnt.Domain\TheAGEnt.Domain.csproj">
       <Project>{B62D0CB9-2D14-42E0-9CC9-D85B867B6EC5}</Project>
       <Name>TheAGEnt.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheAGEnt.Infrastructure\TheAGEnt.Infrastructure.csproj">
+      <Project>{a45b4a93-9daa-460a-b860-c387f074744c}</Project>
+      <Name>TheAGEnt.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
