--- a/TheAGEnt.Core/packages.config
+++ b/TheAGEnt.Core/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="4.1.1" targetFramework="net452" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="4.0.0" targetFramework="net452" />
+  <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net452" />
   <package id="fluent-email" version="1.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
