--- a/TheAGEnt.Infrastructure/TheAGEnt.Infrastructure.csproj
+++ b/TheAGEnt.Infrastructure/TheAGEnt.Infrastructure.csproj
@@ -96,12 +96,19 @@
     <Compile Include="Migrations\201610060737440_init.Designer.cs">
       <DependentUpon>201610060737440_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610061045534_newEntity.cs" />
+    <Compile Include="Migrations\201610061045534_newEntity.Designer.cs">
+      <DependentUpon>201610061045534_newEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201610060737440_init.resx">
       <DependentUpon>201610060737440_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610061045534_newEntity.resx">
+      <DependentUpon>201610061045534_newEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
