--- a/TheAGEnt.Core/packages.config
+++ b/TheAGEnt.Core/packages.config
@@ -29,4 +29,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="RazorEngine" version="3.2.0" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.4.0" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.4.0" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
