Add: dropzone componen

--- a/TheAGEnt.Core/package.json
+++ b/TheAGEnt.Core/package.json
@@ -31,7 +31,10 @@
     "react": "^15.3.2",
     "react-cookie": "^0.4.8",
     "react-dom": "^15.3.2",
+    "react-dropzone-component": "^1.2.0",
+    "react-motion": "^0.4.5",
     "react-router": "^2.8.1",
+    "react-swipeable-views": "^0.7.10",
     "react-tap-event-plugin": "^1.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
