--- a/TheAGEnt.Infrastructure/App.config
+++ b/TheAGEnt.Infrastructure/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
     <connectionStrings>
-    <add name="TheAGEntContext" connectionString="Data Source=np:\\.\pipe\LOCALDB#2AB8D81C\tsql\query;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TheAGEntContext" connectionString="Data Source=WSC-001;Initial Catalog=TheAGEnt;Integrated Security=True" providerName="System.Data.SqlClient" />
 </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
