--- a/TheAGEnt.Infrastructure/TheAGEnt.Infrastructure.csproj
+++ b/TheAGEnt.Infrastructure/TheAGEnt.Infrastructure.csproj
@@ -125,6 +125,14 @@
     <Compile Include="Migrations\201610171423211_AddGrades.Designer.cs">
       <DependentUpon>201610171423211_AddGrades.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610180700167_CheckGrade.cs" />
+    <Compile Include="Migrations\201610180700167_CheckGrade.Designer.cs">
+      <DependentUpon>201610180700167_CheckGrade.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201610180953180_updateGradesEntity.cs" />
+    <Compile Include="Migrations\201610180953180_updateGradesEntity.Designer.cs">
+      <DependentUpon>201610180953180_updateGradesEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -152,6 +160,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610171423211_AddGrades.resx">
       <DependentUpon>201610171423211_AddGrades.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610180700167_CheckGrade.resx">
+      <DependentUpon>201610180700167_CheckGrade.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610180953180_updateGradesEntity.resx">
+      <DependentUpon>201610180953180_updateGradesEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
